--- a/web-config/values.yaml
+++ b/web-config/values.yaml
@@ -4,7 +4,7 @@ image:
   repository: vietanhhust1404/web
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: 1.0.0
+  tag: latest
 
 service:
   type: NodePort
@@ -12,6 +12,8 @@ service:
   targetport: 3000
   nodePort: 30414
 
+env:
+  API: http://192.168.49.2:30415
 
 container:
   name: web
