--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,6 +65,6 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        context: .
+        # context: .
         push: true
         tags: vietanhhust1404/web:${{ github.ref_name }}
